--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           <div class="accordion" id="accordion">
           <div class="accordion-item">
             <h4 class="mb-0">
-              <button class="accordion__button" data-bs-toggle="collapse" data-bs-target="#html">
+              <button class="accordion__button collapsed" data-bs-toggle="collapse" data-bs-target="#html">
                 <span class="accordion__head">
                   <img src="images/html.png" alt="html" class="accordion__logo">
                   html
@@ -114,7 +114,7 @@
                 </span>
               </button>
             </h4>
-            <div id="html" class="accordion-collapse collapse show border-0" data-bs-parent="#accordion">
+            <div id="html" class="accordion-collapse collapse border-0" data-bs-parent="#accordion">
               <p class="accordion_body">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Venenatis felis dui quis eget suspendisse rutrum orci. Elementum, ultrices dictum cras sit volutpat morbi adipiscing ut. Convallis faucibus ligula blandit enim. Accumsan est 
               </p>
@@ -122,7 +122,7 @@
           </div>
           <div class="accordion-item">
             <h4 class="mb-0">
-              <button class="accordion__button" data-bs-toggle="collapse" data-bs-target="#css">
+              <button class="accordion__button collapsed" data-bs-toggle="collapse" data-bs-target="#css">
                 <span class="accordion__head">
                   <img src="images/css.png" alt="css" class="accordion__logo">
                   css
@@ -130,7 +130,7 @@
                 </span>
               </button>
             </h4>
-            <div id="css" class="accordion-collapse collapse show border-0" data-bs-parent="#accordion">
+            <div id="css" class="accordion-collapse collapse border-0" data-bs-parent="#accordion">
               <p class="accordion_body">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Venenatis felis dui quis eget suspendisse rutrum orci. Elementum, ultrices dictum cras sit volutpat morbi adipiscing ut. Convallis faucibus ligula blandit enim. Accumsan est 
               </p>
